<resources>
    <string name="app_name">Five Philosophies</string>
    <string name="first_thing">"Being an angel:
Means —- having no wings.
Means lifting up to their feet
those who have fallen off the beat.

What the great teachers of the past would say today…

Isn’t for them to say

It has been handed to us now: here and now,
To stand up and make our way into truth.

Because we don’t have wings, yet we can help each other fly.

A Personal Tao can be a gift to make a difference.
The gift to simply say: “Hey, just be yourself :)”.
It’s enough to make one fly.
It’s enough to change the world.

Namaste"</string>
    <string name="second_thing">Taoism is acceptance of your life.
Taoism is following your breath to find peace.
Taoism is opening up a smile to enable possibility.</string>
    <string name="third_thing">" I am neither awake, in deep sleep nor dreaming, but above consciousness with which the three are associated. All these are due to ignorance and I am beyond that."</string>
    <string name="fourth_thing">With respect to acting in the face of danger,
courage is a mean between
the excess of rashness and the deficiency of cowardice;

\n\nWith respect to the enjoyment of pleasures,
temperance is a mean between
the excess of intemperance and the deficiency of insensibility;

\n\nWith respect to spending money,
generosity is a mean between
the excess of wastefulness and the deficiency of stinginess;

\n\nWith respect to relations with strangers,
being friendly is a mean between
the excess of being ingratiating and the deficiency of being surly;

\n\nand

\n\nWith respect to self-esteem,
magnanimity is a mean between
the excess of vanity and the deficiency of pusillanimity.
</string>
    <string name="fifth_thing">"Hear much and put aside what is doubtful
\nwhile you speak cautiously of the rest.
\nThen few will blame you.
\nSee much and put aside what seems perilous
\nwhile you are cautious in carrying the rest into practice.
\nThen you will have few occasions for regret.
\nWhen one's words give few occasions for blame
\nand one's acts give few occasions for repentance,
\none is on the way to receiving a salary."</string>

</resources>